--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,6 +5,9 @@ on:
     branches:
       - main
 
+env:
+  BUILD_PATH: "./dist"
+
 jobs:
   build:
     name: Build
@@ -24,27 +27,27 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: production-build
-          path: ./dist
+          path: ${{ env.BUILD_PATH }}
 
   deploy:
     runs-on: ubuntu-latest
     needs: build
+
     permissions:
       pages: write
       id-token: write
+
     environment:
       name: github-pages
-      url: ${{steps.deployment.outputs.page_url}}
+      url: ${{ steps.deployment.outputs.page_url }}
       
     steps:
       - name: Download artifact
         uses: actions/download-artifact@v2
         with:
           name: production-build
-          path: ./dist
+          path: ${{ env.BUILD_PATH }}
 
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v1
-        with:
-          publish_dir: ./dist
